--- a/Extract/index.html
+++ b/Extract/index.html
@@ -13,8 +13,11 @@
 		<button id="upload" ng-click="upload()">
 			upload
 		</button>
-		<button id="export" ng-click="export()">
-			export
+		<button id="exportCsv" ng-click="exportCsv()">
+			export to csv
+		</button>
+		<button id="exportSQL" ng-click="exportSQL()">
+			export to sql
 		</button>
 		
 			<!--<div ng-repeat="table in tables">{{table}}</div>-->
