--- a/Extract/index.html
+++ b/Extract/index.html
@@ -16,12 +16,12 @@
 		<button id="exportCsv" ng-click="exportCsv()">
 			export to csv
 		</button>
+		<button id="exportXml" ng-click="exportXml()">
+			export to xml
+		</button>
 		<button id="exportSQL" ng-click="exportSQL()">
 			export to sql
 		</button>
-		
-			<!--<div ng-repeat="table in tables">{{table}}</div>-->
-			<!--{{Myvar}}-->
-</body>
+	</body>
 
 </html>
